<resources>
    <string name="app_name">InfoMatch</string>
    <string name="high_score">high score</string>
    <string name="exit">exit</string>
    <string name="start_game">start game</string>
    <string name="place_holder" translatable="false">Place Holder</string>
    <string name="back">back</string>
    <string name="manu">Manu</string>
    <string name="choose_number_of_cards">choose number of cards</string>
    <string name="set_timer">set timer</string>
    <string name="no_timer">no timer</string>
    <string name="yes_timer">yes timer</string>
    <string name="score">score</string>
    <string name="elapsed_time">elapsed time</string>
    <string name="pairs_found">pairs found</string>
    <string name="enter_user_name">enter user name</string>
    <string name="enter">enter</string>
    <string name="pause_manu">Pause Manu</string>
    <string name="restart">Restart</string>
    <string name="main_manu">Main Manu</string>
    <string name="you_have_won">you have won</string>
    <string name="your_score_is">Your score is</string>
    <string-array name="cards_amount">
        <item>"12"</item>
        <item>"24"</item>
        <item>"36"</item>
    </string-array>
    <string name="your_time_left_is">Your time left is</string>
    <string name="seconds">seconds</string>
    <string name="you_have_found">You have found</string>
    <string name="pairs">pairs</string>
    <string name="you_won">YOU WON</string>
    <string name="you_have_lost">You have lost</string>
    <string name="you_lost">YOU LOST</string>
    <string name="to_delete_a_score_do_a_long_press">to delete a score do a long press</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="start">Start</string>
    <string name="other_time">Other time</string>
    <string name="hello">Hello</string>
    <string name="special">special</string>
    <string name="screenshot">screenshot</string>
    <string name="select_date">select date</string>
    <string name="set_date">set date</string>
    <string name="select_alarm">select alarm</string>
    <string name="set_alarm">set alarm</string>
    <string name="click_here_to_see_the_source_code">Click here to see the source code</string>
    <string name="explain">rules of the game: in this game every 2 cards of the 12 in front of you is part of a pair one is a question the other is the answer\nin order to win you mast find all 6 pairs (in case you chose 24 or 36 once you fond 6 pairs a new set of 6 pairs will take there place)\nonce you have fond all the pairs a win message will appear and your result will be added to the high score list that can be viewed from the highscore button back in the main manu\nin the case you did chose to have a timer you will notice a number going down on screen if the timer hits 0 before you find all the pairs you will get a game failed screen and this result will not be added to your high score\nin terms of score when you find a correct pair you receive 1 point however if your next pair is correct you will receive 2 points if the next pair is also correct it will be 3 points\nhowever if you get a wrong pair there is no more bonus and you will go back to only 1 point</string>
</resources>