<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/set_timer"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/set_timer" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/yes_timer_radio_btn1"
        android:id="@+id/radiogroup">

        <RadioButton
            android:id="@+id/yes_timer_radio_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_timer" />

        <RadioButton
            android:id="@+id/no_timer_radio_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/no_timer" />
    </RadioGroup>

    <TextView
        android:id="@+id/set_pairs"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="choose number of pairs" />

    <Spinner
        android:id="@+id/spinner_num_of_cards"
        android:layout_width="117dp"
        android:layout_height="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cancel" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Start"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>